<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="my_job">My Job</string>

    <string name="minimum_pay_per_hour">Minimum Pay Per Hour</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="send_invitations">Send Invitations</string>
    <string name="send_request">Send Request</string>
    <string name="message">Message</string>
    <string name="setting">Setting</string>
    <string name="account_setting">Account Setting</string>
    <string name="notification">Notification</string>
    <string name="muteNotification">Mute Notification</string>
    <string name="close_or_deactivate_account">Close Or Deactivate Account</string>
    <string name="my_posted_jobs">My Posted Jobs</string>
    <string name="completed">Completed</string>
    <string name="ongoing">Ongoing</string>
    <string name="friendList">Friend List</string>
    <string name="receivedRequest">Received Request</string>
    <string name="sentRequest">Sent Request</string>
    <string name="my_posted_reviews">My posted reviews and rating</string>
    <string name="my_reviews_and_ratings">My reviews and Ratings</string>
    <string name="received_bid_request">Received Bid Requests</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="job_title">Job Title</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="create_new_job">Create New Job</string>
    <string name="job_hour">Job Hour</string>
    <string name="job_days">Job time in days</string>
    <string name="pay_per_hour">Pay per hour</string>
    <string name="job_pay_range">Job range</string>
    <string name="fixed_amount">Fixed amount</string>
    <string name="start_date">Start Date</string>
    <string name="number_of_labours">Number of labours</string>
    <string name="payment_type">Payment Type</string>
    <string name="payment_type_error">Please Select Payment Type</string>
    <string name="rating">Rating</string>
    <string name="rated">Rated</string>
    <string name="giveRating">Give Rating</string>
    <string name="enter_message">Enter Message</string>
    <string name="review">Review</string>
    <string name="my_applied_bided_job">My Applied /Bided job</string>
    <string name="my_pays">My Pays</string>
    <string name="sent_bid_requests">Sent Bid requests</string>
    <string name="feed_job">Feed Job</string>
    <string name="wallet">Wallet</string>
    <string name="escalation">Escalation</string>
    <string name="escalation_job">Escalation Job</string>
    <string name="group">Group</string>
    <string name="enter_amount_for_pay_per_hour">Enter amount for pay per hour</string>
    <string name="enter_fix_amount_for_job_biding">Enter Fix amount for job biding</string>
    <string name="enter_fix_amount">Enter Fix amount</string>
    <string name="change_language">Change Language</string>
    <string name="group_chat">Group Chat</string>
    <string name="customer_chat">Customer Chat</string>
    <string name="chat_requests">Chat Requests</string>
    <string name="received_reviews">Received Reviews</string>
    <string name="posted_ratings">Posted Reviews</string>
    <string name="posted">Posted </string>
    <string name="change_password">Change Password</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="enter_feedback">Enter Feedback</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="change_payment_method">Change Payment Method</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="notavaliableservice">Jobs are not available</string>
    <string name="post">Post</string>
    <string name="create_group">Create Group</string>
    <string name="time_estimation">Time Estimation</string>
    <string name="cost_estimation">Cost Estimation</string>
    <string name="comment_queries">Comment / queries</string>
    <string name="place_bid">Place Bid</string>
    <string name="indays">In Days</string>
    <string name="bid_detail">Bid Detail</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="rejected">rejected</string>
    <string name="editBid">Edit Bid</string>
    <string name="postedStatus">posted</string>
    <string name="ongoingStatus">ongoing</string>
    <string name="amountpendingStatus">amountpending</string>
    <string name="satisfiedStatus">satisfied</string>
    <string name="escalatedStatus">escalated</string>
    <string name="completedStatus">completed</string>
    <string name="PhotoValidation">You can upload only two photos</string>

    <string name="competeJob">Complete Job</string>
    <string name="requestAmount">Request Amount</string>
    <string name="uploaded_document">Uploaded Document</string>
    <string name="search">Search</string>
    <string name="myWallet">My Wallet</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="recharge_wallet">Recharge Wallet</string>
    <string name="transfer_to_bank">Transfer To Bank</string>
    <string name="transfer_to_wallet">Transfer To Wallet</string>
    <string name="walletHistory">Wallet History</string>
    <string name="bankHistory">Bank History</string>
    <string name="rewardedHistory">Rewarded History</string>
    <string name="connections">Connections</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="review_detail">Review Detail</string>
    <string name="reason_for_escalation">Reason For Escalation</string>
    <string name="upload_image">Upload Image</string>
    <string name="group_member">Group Member</string>
    <string name="remove">Remove</string>
    <string name="created_labours">Created Labours</string>
    <string name="create_new">Create New</string>
    <string name="create_labour">Create Labour</string>
    <string name="view_messages">View Messages</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="release_amount">Release Amount</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="attach_files">Attach Files</string>
    <string name="send">Send</string>
    <string name="near_by">Near By</string>
    <string name="add_new_connection">Add New Connection</string>
    <string name="in_hours">In Hours</string>
    <string name="rewarded_points">Rewarded Points</string>
    <string name="reward_points">Reward Points</string>
    <string name="_100_points_is_min_for_transfer">100 points is min. for transfer</string>
    <string name="login_success">Login successfully</string>
    <string name="something_wrong">Something wrong</string>
    <string name="plz_ent_ur_name">Please enter the Name</string>
    <string name="mim_sir">minimum six 6 character</string>
    <string name="plz_ent_cnf_pass">Please enter the confirm Password</string>
    <string name="pass_nd_cnf_pass_not">Password and confirm Password do not match</string>
    <string name="ent_ur_loc">Please enter your location</string>
    <string name="ent_str_or_house_no">Please enter your hours no/street/landmark</string>
    <string name="plz_ent_email">Please enter your email</string>
    <string name="plz_ent_des">Please enter your Description</string>
    <string name="mini_pay_per">Please enter minimum pay per hour</string>
    <string name="edit">Edit</string>
    <string name="name_is_large">Name is too large</string>
    <string name="current_pass">Enter current password</string>
    <string name="ent_new_pass">Please enter new password</string>
    <string name="pass_must_be_6">password must be 6 character</string>
    <string name="range">range</string>
    <string name="applied">Applied</string>
    <string name="notapplied">NotApplied</string>
    <string name="errorEstimationTime">Please enter time estimation</string>
    <string name="errorEstimationCost">Please enter cost estimation</string>
    <string name="errorQueries">Please enter comment / queries</string>
    <string name="errorJobTitle">Please Enter Job Title</string>
    <string name="errorDescription">Please Enter Description</string>
    <string name="errorJobDays">Please Enter Job Days</string>
    <string name="errorStartDate">Please Enter Start Date</string>
    <string name="errorNoLabours">Please Enter No.Of Labours</string>
    <string name="errorNoLaboursValid">Please Enter At least 1 No.Of Labours</string>
    <string name="errorLocation">Please Enter Your Location</string>
    <string name="errorStreet">Please Enter Street</string>
    <string name="errorName">Please Enter Name</string>
    <string name="errorAddress">Please Enter Your Location</string>
    <string name="errorMPPH">Please Enter minimum pay per hour</string>
    <string name="errorPPH">Please Enter  pay per hour</string>
    <string name="errorSkills">Please Select Skill</string>
    <string name="errorUploadImage">Please Upload Image</string>
    <string name="errorUploadImageWork">please upload completed work image</string>
    <string name="select_skills">Select Skills</string>
    <string name="select_already_select_skills">you have already select this skill</string>
    <string name="pph">pph</string>
    <string name="fix">fix</string>
    <string name="message_is_here">message is here</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="atleastone">Please select at-least one skill</string>
    <string name="rvm_frm_grp">Are you sure to remove from Group?</string>
    <string name="left_group_pop_txt">Are you sure, you want to left from this group</string>
    <string name="pass_must_6">Password must have atleast 6 digit with one character and special character</string>
    <string name="suucess_signup">Please confirm your email address using the verification link sent to you. In case it’s missing from your inbox, please check your spam folder</string>
    <string name="jobPostMsgConfirm">For this job post you need to make transaction of ....USD from your wallet</string>
    <string name="romve_from_frnd">Are you sure to remove from friend list?</string>
    <string name="add_on_group">Are you sure to add on group?</string>
    <string name="first_rvm">First remove from group and after that you can remove from friend list!</string>
    <string name="requesting">Requesting</string>
    <string name="you_don_t_have_any_request">You don\'t have any request</string>
    <string name="left_group">Left Group</string>

    <string name="you_r_not_connected">you are not connected with any group</string>
    <string name="not_created_labour">No labour created</string>
    <string name="are_you_sure_rvm_frm_grp">Are you sure remove from Group</string>


    <string name="firebase_token">FIREBASETOKEN</string>
    <string name="archive">Archive</string>
    <string name="empty_list">Empty list!!</string>
    <string name="query_or_comment">Query or comment</string>
    <string name="amount_of_bid">Amount of bid</string>
    <string name="notification_empty_text">You don\'t have any notifications</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="location">Location</string>
    <string name="uploaded_images_on_completion">Uploaded Images On Job Completion</string>
    <string name="uploaded_images_on_job_escalation">Uploaded Images On Job escalation</string>
    <string name="bid_reject_date">Bid Reject date</string>
    <string name="bid_accept_date">Bid Accept date</string>
</resources>