<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomerPart.Fragments.CategoryFragments.CurrentFragment">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:text="@string/hello_blank_fragment"
                android:weightSum="1">

                <TextView
                    android:id="@+id/dateSearch"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="0.6"
                    android:background="@drawable/round_border"
                    android:gravity="center"
                    android:text="@string/date" />

                <EditText
                    android:id="@+id/editSearchOngoing"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="0.4"
                    android:background="@drawable/round_border"
                    android:drawableRight="@drawable/search_icon"
                    android:gravity="center|left"
                    android:hint="@string/job_title"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:singleLine="true"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerCurrentJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textNotAvailable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/notavaliableservice"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</FrameLayout>