<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomerPart.Fragments.HomeCustomerFragment"
    android:padding="@dimen/_5sdp">
    <TextView
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="sans-serif-medium"
        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_45sdp"
        android:padding="@dimen/_10sdp"
        >
        <LinearLayout
            android:id="@+id/layoutCreateJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView

                android:id="@+id/txtProfile"
                android:textColor="@color/darkGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/profile_text"
                android:padding="@dimen/_10sdp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/lightGray"/>
            <TextView
                android:id="@+id/txtAccountSetting"
                android:textColor="@color/darkGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/account_setting" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/lightGray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/muteNotification"
                    android:layout_weight="0.9"
                    android:textColor="@color/darkGray"
                   />

                <ToggleButton
                    android:id="@+id/toggleNotification"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="0.1"
                    android:background="@drawable/toggle_background"
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/lightGray"/>
            <TextView
                android:id="@+id/txtChangeLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/change_language"
                android:textColor="@color/darkGray"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/lightGray"/>
            <TextView
                android:id="@+id/txtCloseAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/close_or_deactivate_account"
                android:textColor="@color/darkGray"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/lightGray"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>